--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -438,7 +438,7 @@ header.headerfix .header_top {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 120px;
+    padding: 0 120px 40px;
     box-sizing: border-box;
 }
 .sec2 h2 {
@@ -1145,8 +1145,17 @@ header.headerfix .header_top {
     .sec3 .inner > .tab_group > .tab_btn > ul > li > a {
         padding: 40px 20px;
     }
+    
 }
-
+/* ============================================================
+    미디어쿼리 max-width: 1400px
+============================================================ */
+@media screen and (max-width: 1400px) {
+    /* 스와이퍼 위치 */
+    .swiper-container .swiper-pagination.sec1_full {
+        top: 17%;
+    }
+}
 /* ============================================================
     미디어쿼리 max-width: 1300px
 ============================================================ */
@@ -1155,7 +1164,7 @@ header.headerfix .header_top {
         padding-top: 95px;
     }
     .swiper-container .swiper-pagination.sec1_full {
-        top: 11%;
+        top: 13%;
     }
     .swiper-container > .swiper-wrapper > .swiper-slide {
         height: 100vh;
@@ -1353,6 +1362,9 @@ header.headerfix .header_top {
     }
     .swiper-container .swiper-pagination.sec1_full .swiper-pagination-bullet::after {
         font-size: 16px;
+    }
+    .section_wrap {
+        align-items: flex-start;
     }
     /* section01 */
     .swiper-container .slide_wrap .inner {
@@ -1699,6 +1711,115 @@ header.headerfix .header_top {
     .main_ban_swiper_wrap {
         display: none;
     }
+}
 
+/* ============================================================
+    미디어쿼리 max-width: 1024px max-height: 768px
+============================================================ */
+@media screen and (max-width: 1024px) and (max-height: 750px) {
+    .swiper-container .swiper-pagination.sec1_full {
+        top: 12%;
+    }
+}
+@media screen and (max-width: 1030px) {
+    .swiper-container .slide_wrap .inner .total li {
+        min-width: 310px;
+    }
+}
 
+/* ============================================================
+    미디어쿼리 max-height: 750px
+============================================================ */
+@media screen and (orientation: landscape) {
+    .swiper-container .swiper-pagination.sec1_full {
+        top: 18%;
+    }
+    .swiper-container .swiper-pagination.sec1_full .swiper-pagination-bullet::after {
+        font-size: 20px;
+    }
+    .swiper-container .slide_wrap .inner .tit h2 div {
+        font-size: 48px;
+    }
+    .swiper-container .slide_wrap.second .inner .total li {
+        min-width: 400px;
+    }
+    .swiper-container .slide_wrap .inner .total li .total_tit {
+        font-size: 18px;
+    }
+    .swiper-container .slide_wrap .inner .total li .total_tit span {
+        top: -22px;
+        font-size: 12px;
+    }
+    .swiper-container .slide_wrap .inner .total li .total_content strong {
+        font-size: 18px;
+    }
+    .swiper-container .slide_wrap .inner .total li .total_content span {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-height: 750px) and (orientation: landscape) {
+    .swiper-container {
+        overflow: hidden;
+        min-height: 100vh;
+    }
+    .swiper-container > .swiper-wrapper > .swiper-slide {
+        height: auto;
+    }
+    .swiper-container .slide_wrap .img {
+        height: 100%;
+    }
+
+    /* 스크롤 */
+    .fp-section.fp-table,
+    .fp-slide.fp-table,
+    .fp-tableCell,
+    .fp-scrollable {
+        height: auto !important;
+    }
+}
+@media screen and (max-height: 600px) and (orientation: landscape) {
+    .swiper-container {
+        height: auto;
+    }
+    .swiper-container .slide_wrap {
+        height: auto;
+    }
+    .swiper-container .swiper-pagination.sec1_full {
+        top: 11%;
+    }
+    .main_quickmenu ul li a {
+        font-size: 13px;
+    }
+    .main_quickmenu ul li.active a {
+        font-size: 16px;
+    }
+    .main_quickmenu .mymenu {
+        font-size: 13px;
+    }
+    .quick_box {
+        width: 45px;
+    }
+    .quick_box ul li a {
+        height: 40px;
+        background-size: auto 19px;
+    }
+    .quick_box ul li.btn_top a {
+        height: 70px;
+    }
+    .quick_box ul li.btn_bell a span {
+        top: -7px;
+        right: 7px;
+        width: 30px;
+        height: 15px;
+        border-radius: 13px;
+    }
+}
+@media screen and (max-height: 500px) and (orientation: landscape) {
+    .swiper-container .swiper-pagination.sec1_full {
+        top: 11%;
+    }
+    .swiper-container .slide_wrap .inner .tit h2 div {
+        font-size: 32px;
+    }
 }
