--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -4762,6 +4762,9 @@ footer .footer_bottom {
     header .header_bottom .btn_bottom {
         flex-direction: column;
     }
+    header .header_top nav > ul > li > a {
+        font-size: 16px;
+    }
 }
 @media screen and (max-width: 1280px) {
     .error_page .top .content .left p {
