투자가이드 링크 수정 및 체크박스리스트타입2 라인수정

--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -2563,6 +2563,9 @@
 .chk_list.type_02 > li + li {
     border-top: 1px solid #d9e1e7;
 }
+.chk_list.type_02 > li .chk_box {
+    align-items: baseline;
+}
 .chk_list.type_02 > li .chk_box span {
     justify-content: flex-start;
     align-items: center;
