--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -1497,6 +1497,7 @@
 }
 .tbl_longcard > ul > li .tit strong {
     display: flex;
+    gap: 10px;
     align-items: center;
     width: 100%;
     font-size: 20px;
@@ -2666,14 +2667,15 @@
 }
 
 /* 탭 */
-.tab_group .tab_btn ul {
+.tab_group .tab_btn > ul {
     display: flex;
     border-bottom: 1px solid #c1c1c1;
 }
-.tab_group .tab_btn ul > li {
+.tab_group .tab_btn > ul > li {
     flex: 1;
+    position: relative;
 }
-.tab_group .tab_btn ul > li > a {
+.tab_group .tab_btn > ul > li > a {
     display: flex;
     justify-content: center;
     margin-bottom: -1px;
@@ -2681,7 +2683,7 @@
     font-size: 22px;
     font-weight: 500;
 }
-.tab_group .tab_btn ul > li.on > a {
+.tab_group .tab_btn > ul > li.on > a {
     border-bottom: 2px solid #1c44c8;
     font-weight: 600;
     color: #1c44c8;
@@ -2696,6 +2698,28 @@
 }
 .tbl_box_data + .tab_group {
     margin-top: 30px;
+}
+/* 탭 메뉴 hover */
+.tab_group .tab_btn > ul > li .tab_submenu {
+    display: none;
+    position: absolute;
+    top: 89px;
+    left: 0;
+    width: 100%;
+    height: 0px;
+    z-index: 10;
+}
+.tab_group .tab_btn > ul > li:hover .tab_submenu,
+.tab_group .tab_btn > ul > li:focus .tab_submenu,
+.tab_group .tab_btn > ul > li.active .tab_submenu {
+    display: block;
+    height: auto;
+}
+.tab_group .tab_btn > ul > li .tab_submenu li a {
+    display: block;
+    width: 100%;
+    background-color: #fff;
+    text-align: center;
 }
 
 /* 페이징 */
@@ -3170,7 +3194,7 @@ a.ui-button:active,
     }
     .tbl_longcard > ul > li .tit strong {
         flex-wrap: wrap;
-        gap: 5px;
+        gap: 10px;
         font-size: 17px;
     }
     .tbl_longcard > ul > li.notice .tit strong::before {
@@ -3216,10 +3240,10 @@ a.ui-button:active,
         transform: translateY(0);
     }
     .tbl_longcard > ul > li .info .btn_box * {
-        padding: 5px 0;
+        padding: 5px;
     }
-    .tbl_longcard.type_chk > ul > li .info > ul > li {
-        flex: 1;
+    .tbl_longcard.type_chk > ul > li .info > ul > li .btn_box {
+        min-width: 80px;
     }
     .tbl_longcard.type_chk > ul > li .info > ul > li .btn_box * {
         font-size: 14px;
