--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -2150,7 +2150,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .tbl_card_list.type_01 > ul > li {
     flex-basis: calc(25% - 15px);
@@ -2207,6 +2207,10 @@
     bottom: 20px;
     right: 20px;
 }
+.tbl_card_list.type_01 > ul > li .content > ul > li {
+    display: flex;
+    align-items: center;
+}
 .tbl_card_list.type_01 > ul > li .content > ul > li,
 .tbl_card_list.type_01 > ul > li .content > ul > li > a {
     font-style: normal;
@@ -2225,16 +2229,14 @@
 .tbl_card_list.type_01 > ul > li .content > ul .card_set ul {
     top: 23px;
 }
-.tbl_card_list.type_01 > ul > li > .pop_mini2 {
-    position: absolute;
-    top: 16px;
-    right: 0;
-    width: 40px;
-    height: 44px;
-    background: url(../images/ico/ico_set.png) no-repeat center;
-    text-indent: -9999px;
+.tbl_card_list.type_01 > ul > li .content > ul > li .modify {
+    display: block;
+    padding: 2px 10px;
+    background-color: #d9e1e7;
+    border: 1px solid #d9e1e7;
+    border-radius: 4px;
+    font-weight: 400;
     cursor: pointer;
-    z-index: 1;
 }
 .card_set > ul {
     display: none;
@@ -2812,6 +2814,9 @@
 }
 .btn_state_box .btn_gray {
     background-color: #979797;
+}
+.btn_state_box .btn_navy {
+    background-color: #303f9f;
 }
 
 /* datepicker */
